{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 34,
  "lineage": "0cc53ccf-ed8d-13fc-e771-40484d1ed6b5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tf-mod3-lab1-fwrule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "1234"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-03-24T13:53:09.397-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/module3-454719/global/firewalls/tf-mod3-lab1-fwrule1",
            "log_config": [],
            "name": "tf-mod3-lab1-fwrule1",
            "network": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/networks/tf-mod3-lab1-network1",
            "priority": 1000,
            "project": "module3-454719",
            "self_link": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/firewalls/tf-mod3-lab1-fwrule1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tf-mod3-lab1-network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tf-mod3-lab1-fwrule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "1234"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-03-24T13:53:09.425-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/module3-454719/global/firewalls/tf-mod3-lab1-fwrule2",
            "log_config": [],
            "name": "tf-mod3-lab1-fwrule2",
            "network": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/networks/tf-mod3-lab1-network2",
            "priority": 1000,
            "project": "module3-454719",
            "self_link": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/firewalls/tf-mod3-lab1-fwrule2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tf-mod3-lab1-network2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vxlan1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "50000"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-03-24T14:23:38.711-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/module3-454719/global/firewalls/allow-vxlan1",
            "log_config": [],
            "name": "allow-vxlan1",
            "network": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/networks/tf-mod3-lab1-network1",
            "priority": 1000,
            "project": "module3-454719",
            "self_link": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/firewalls/allow-vxlan1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vxlan2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "50000"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-03-24T14:23:38.744-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/module3-454719/global/firewalls/allow-vxlan2",
            "log_config": [],
            "name": "allow-vxlan2",
            "network": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/networks/tf-mod3-lab1-network2",
            "priority": 1000,
            "project": "module3-454719",
            "self_link": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/firewalls/allow-vxlan2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tf-mod3-lab1-vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240312",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/module3-454719/zones/us-central1-a/disks/tf-mod3-lab1-vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/module3-454719/zones/us-central1-a/instances/tf-mod3-lab1-vm1",
            "instance_id": "8395358347373344929",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script": "sudo apt update; sudo apt -y install netcat-traditional ncat;"
            },
            "metadata_fingerprint": "Gzk67qvpq_o=",
            "name": "tf-mod3-lab1-vm1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/networks/tf-mod3-lab1-network1",
                "network_ip": "172.16.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/module3-454719/regions/us-central1/subnetworks/tf-mod3-lab1-subnet1",
                "subnetwork_project": "module3-454719"
              }
            ],
            "project": "module3-454719",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/module3-454719/zones/us-central1-a/instances/tf-mod3-lab1-vm1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.tf-mod3-lab1-network1",
            "google_compute_subnetwork.tf-mod3-lab1-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tf-mod3-lab1-vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240312",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/module3-454719/zones/us-east1-b/disks/tf-mod3-lab1-vm2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/module3-454719/zones/us-east1-b/instances/tf-mod3-lab1-vm2",
            "instance_id": "7295221720251398457",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script": "sudo apt update; sudo apt -y install netcat-traditional ncat;"
            },
            "metadata_fingerprint": "Gzk67qvpq_o=",
            "name": "tf-mod3-lab1-vm2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/networks/tf-mod3-lab1-network2",
                "network_ip": "172.16.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/module3-454719/regions/us-east1/subnetworks/tf-mod3-lab1-subnet2",
                "subnetwork_project": "module3-454719"
              }
            ],
            "project": "module3-454719",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/module3-454719/zones/us-east1-b/instances/tf-mod3-lab1-vm2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.tf-mod3-lab1-network2",
            "google_compute_subnetwork.tf-mod3-lab1-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "tf-mod3-lab1-network1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/module3-454719/global/networks/tf-mod3-lab1-network1",
            "mtu": 0,
            "name": "tf-mod3-lab1-network1",
            "project": "module3-454719",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/networks/tf-mod3-lab1-network1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "tf-mod3-lab1-network2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/module3-454719/global/networks/tf-mod3-lab1-network2",
            "mtu": 0,
            "name": "tf-mod3-lab1-network2",
            "project": "module3-454719",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/networks/tf-mod3-lab1-network2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "cloud-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2025-03-24T13:53:30.811-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/module3-454719/regions/us-east1/routers/cloud-router",
            "name": "cloud-router",
            "network": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/networks/tf-mod3-lab1-network2",
            "project": "module3-454719",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/module3-454719/regions/us-east1/routers/cloud-router"
          },
          "dependencies": [
            "google_compute_network.tf-mod3-lab1-network2",
            "google_compute_subnetwork.tf-mod3-lab1-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cloud-router-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "module3-454719/us-east1/cloud-router/cloud-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "cloud-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "module3-454719",
            "region": "us-east1",
            "router": "cloud-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.tf-mod3-lab1-network2",
            "google_compute_router.cloud-router",
            "google_compute_subnetwork.tf-mod3-lab1-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "tf-mod3-lab1-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-24T13:53:11.140-07:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/module3-454719/regions/us-central1/subnetworks/tf-mod3-lab1-subnet1",
            "ip_cidr_range": "172.16.0.0/24",
            "name": "tf-mod3-lab1-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/networks/tf-mod3-lab1-network1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "module3-454719",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/module3-454719/regions/us-central1/subnetworks/tf-mod3-lab1-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.tf-mod3-lab1-network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "tf-mod3-lab1-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-24T13:53:09.622-07:00",
            "gateway_address": "172.16.1.1",
            "id": "projects/module3-454719/regions/us-east1/subnetworks/tf-mod3-lab1-subnet2",
            "ip_cidr_range": "172.16.1.0/24",
            "name": "tf-mod3-lab1-subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/module3-454719/global/networks/tf-mod3-lab1-network2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "module3-454719",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/module3-454719/regions/us-east1/subnetworks/tf-mod3-lab1-subnet2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.tf-mod3-lab1-network2"
          ]
        }
      ]
    }
  ]
}